Add broken item icons to external API
